--- a/vue-primeiro/index.html
+++ b/vue-primeiro/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
+
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-primeiro</title>
+    <title>vue-app</title>
   </head>
   <body>
     <div id="app"></div>
